--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,3 +24,36 @@ body {
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
+
+
+
+.hidden-scroll::-webkit-scrollbar{
+  display: none;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-primary-800 bg-opacity-30;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-primary-900 bg-opacity-80;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+
+
+
+.Notivue__content-message {
+  overflow: hidden !important;
+}
